Fixed styling for body glass covered look

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  background-image: linear-gradient(141deg, #3725d4, var(--primary) 71%, #9b67df)
+  background-image: linear-gradient(141deg, #3725d4, var(--primary) 71%, #9b67df);
+  min-height: 100vh;
 }
 
 .flex {
